--- a/network-fix.service
+++ b/network-fix.service
@@ -5,9 +5,10 @@ after=network-online.target
 [Service]
 Type=oneshot
 ExecStart=/usr/sbin/ip -6 route add default via fe80::be24:11ff:fec4:b0bb dev eth0
-Execstart=/usr/sbin/dhclient -r -6
-ExecStart=/usr/sbin/dhclient -6
+Execstart=/usr/sbin/dhclient -r -6 eth0
+ExecStart=/usr/sbin/dhclient -6 eth0
 RemainAfterExit=yes
 
 [Install]
+
 WantedBy=multi-user.target
